# Prelucrare-Grafic-UTCN

lab1/: CMakeLists.txt  install.sh
lab1/cmake/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
lab1/cmake/.cache/clangd/index/: GPSLab1.cpp.28A2886DB968A982.idx  GPSLab1.hpp.36871211794D0764.idx  _fixes.hpp.69B839704E8876B6.idx  _matrix_vectorize.hpp.58DAD1C7487B6860.idx  _noise.hpp.AA10354C24F41274.idx  _vectorize.hpp.1EAA9D7E02BD8834.idx  bitfield.hpp.39B526EE2B54F492.idx  bitfield.inl.2F238FF5CF0C2134.idx  color_space.hpp.7E7902A0295B0D30.idx  color_space.inl.47B0A3A3065EF3C4.idx  common.hpp.E1F6215B36BC08A6.idx  compute_common.hpp.C0E4701FBD6B2748.idx  compute_vector_decl.hpp.9A2C67A604CE887B.idx  compute_vector_relational.hpp.C9A6F81AEBAB4471.idx  constants.hpp.3ECFE77AC0A371BB.idx  constants.inl.AF68BA9B5C5EBD8C.idx  dual_quaternion.hpp.B3DF5A84E9B5F91C.idx  dual_quaternion.inl.DAC2C6712ED0A75F.idx  epsilon.hpp.9D2DE6C4D6C20A32.idx  epsilon.inl.C61F40FED4A199F0.idx  exponential.hpp.C3D3F498E44A71CC.idx  ext.hpp.6B756FDF59526E20.idx  func_common.inl.3B0B55BAC882DAFF.idx  func_exponential.inl.11D6FEC2775C007C.idx  func_geometric.inl.E396C90CFC0F7A7A.idx  func_integer.inl.06D0149AF3CB9095.idx  func_matrix.inl.A4D9A4146B571D04.idx  func_packing.inl.B00B4F9CE6B6775A.idx  func_trigonometric.inl.531BF9F90E799385.idx  func_vector_relational.inl.1512F16BC28EC347.idx  fwd.hpp.E2A868822F356038.idx  geometric.hpp.9C86D8ACA5383529.idx  glm.cpp.E05BEB912E6E032F.idx  glm.hpp.48DB80ADF30ABC3A.idx  integer.h.925A451075056370.idx  integer.hpp.45974834A2291852.idx  integer.hpp.6DD2343D8603D2D0.idx  integer.inl.00556A68D498B7A7.idx  main.cpp.D5007615DF799E86.idx  mat2x2.hpp.2825CBB6E4F9BFAA.idx  (+240 more)
lab1/cmake/libs/glm/: Makefile  cmake_install.cmake
lab1/cmake/libs/glm/glm/: Makefile
lab1/src/: main.cpp
lab2/: CMakeLists.txt
lab2/src/: GPSLab1.cpp  main.cpp
lab3/: CMakeLists.txt
lab3/src/: main.cpp
lab4/: CMakeLists.txt
lab4/include/: GPSLab1.hpp  glfw
lab4/shaders/: shaderStart.frag  shaderStart.vert
lab4/src/: main.cpp
lab5/: CMakeLists.txt  main.cpp  main_backup.cpp
lab5/shaders/: shaderStart.vert
lab5/src/: Shader.cpp  Shader.hpp
lab7/: CMakeLists.txt  main.cpp
lab7/src/: Mesh.cpp  Mesh.hpp  Model3D.cpp
